--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -7,7 +7,7 @@
         margin-top: 1rem;
 
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
         // grid-template-rows: masonry;
         gap: 0.5rem;
 
