--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -85,8 +85,8 @@ body {
       transition: all 1s ease;
    }
    .work-section, .blog-section, .space-section{
-      background-color: #cecece;
-      color: #e8e6e6
+      color: #cecece;
+      background-color: #e8e6e6;
    }
 }
 
