--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,4 +1,5 @@
-.blog-page, .blog-section {
+.blog-page,
+.blog-section {
     overflow: hidden;
     padding: 0rem 0.5rem;
 
@@ -6,23 +7,25 @@
         // padding: 0rem 0.5rem;
         margin-top: 3rem;
     }
-    
-    .project-preview{
+
+    .project-preview {
         display: flex;
         align-items: flex-start;
         width: 100%;
         margin: 0.5rem 0rem;
-        
-        h2{
+        background: linear-gradient(rgb(68, 180, 68), rgb(134, 134, 255));
+        margin: 0.5rem;
+        border-radius: 2rem;
+        h2 {
             display: inline;
-    
+
             font-size: 1.8rem;
             font-family: Kleukens;
             margin: 0rem 0.5rem;
             vertical-align: top;
         }
-        
-        .cover-title{
+
+        .cover-title {
             h1 {
                 font-size: 5rem;
                 font-weight: 90;
@@ -31,10 +34,10 @@
                 display: inline;
                 vertical-align: top;
             }
-            
-            h2{
+
+            h2 {
                 display: inline;
-                
+
                 vertical-align: top;
                 font-size: 1.8rem;
                 font-family: Kleukens;
@@ -42,30 +45,32 @@
                 // vertical-align: top;
             }
 
-            .year{
+            .year {
                 display: none;
             }
         }
     }
 
-    .cover-image{
+    .cover-image {
         // align-self: flex-end;
         height: 4rem;
-        width: auto;
+        width: max-content;
         margin: 0rem 0.5rem;
-        
+
         div {
             width: 100%;
             height: 100%;
         }
-
-        img{
+        
+        img {
+            width: 100%;
+            height: 100%;
             object-fit: contain;
         }
     }
 }
 
-.blog-page{
+.blog-page {
     min-height: 100vh;
     width: 100vw;
 }
@@ -175,16 +180,16 @@
         width: 100%;
         display: flex;
         flex: 1 1 0;
-        
+
         gap: 1rem;
 
-        div{
+        div {
             flex-basis: 100%;
         }
     }
 
     .text-section {
-       max-width: 100%;
+        max-width: 100%;
         display: flex;
         gap: 1rem;
     }
