--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -23,7 +23,7 @@
         .cover-image {
             width: auto;
             transition: all 0.25s ease;
-            // margin: 0rem 0.5rem;
+            margin-bottom: 0.5rem;
 
             div {
                 width: 100%;
@@ -43,25 +43,8 @@
             // display: grid;
             // grid-template-columns: repeat(6, 1fr);
             gap: 0.5rem 1.5rem;
-            margin: 0.5rem;
-            // margin-top: -4rem;
-            // bottom: 0rem;
-            // width: 100%;
-
-            // h1 {
-            //     display: block;
-            //     font-family: "Helvetica";
-            //     font-size: 3rem;
-            //     line-height: 2.5rem;
-            //     grid-column: span 3;
-            // }
-
-            // h2 {
-            //     display: inline;
-            //     grid-column: span 2;
-            //     font-family: Kleukens;
-            //     font-size: 1.5rem;
-            // }
+            // margin: 0.5rem;
+            
 
             h1 {
                 font-size: 4.5rem;
