--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -146,8 +146,8 @@ body {
             width:fit-content;
 
             h1 {
-               //  font-size: 3rem;
-               //  line-height: 3rem;
+                font-size: 3rem;
+                line-height: 3rem;
             }
          }
       }
