--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -92,7 +92,7 @@ body {
 
 .color-theme {
    background-color: rgba(0,0,0,0);
-   background-image: linear-gradient(rgb(7, 7, 233), yellow);
+   background-image: linear-gradient(rgb(22, 53, 255), rgb(255, 215, 17), rgb(68, 180, 68));
 
    transition: all 1s ease;
 
@@ -115,8 +115,12 @@ body {
          .cover-title{
             padding: 0.5rem;
             background: rgb(254, 214, 54);
-            background: linear-gradient(rgb(254, 214, 54), rgb(134, 134, 255, 0.3));
+            // background: linear-gradient(rgb(254, 214, 54), rgb(134, 134, 255, 0.3));
             border-radius: 2rem;
+            h1 {
+               font-size: 3rem;
+               line-height: 2.5rem;
+           }
          }
       }
    }
@@ -172,7 +176,7 @@ body {
          .cover-title{
             padding: 0.5rem;
             background: rgb(254, 214, 54);
-            background: linear-gradient(rgb(134, 134, 255), rgb(254, 214, 54, 0.6));
+            // background: linear-gradient(rgb(134, 134, 255), rgb(254, 214, 54, 0.6));
             border-radius: 2rem;
          }
       }
