--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -38,14 +38,17 @@
 
     .color-modes {
         display: flex;
+        flex-direction: column;
         position: fixed;
-        right: 2rem;
+        right: 0rem;
+        justify-content: center;
 
         li {
             // position: absolute;
             // right: 0;
             // transform:translateX(200px);
-            // margin: 0rem -1.3rem ;
+            margin: 0rem 0rem;
+            margin-bottom: -1rem;
             // visibility: hidden;
             // display: none;
             // opacity: 0;
@@ -68,7 +71,7 @@
 
         button{
             img{
-                height: 50px;
+                max-height: 5rem;
                 max-width: 6rem;
             }
         }
@@ -77,6 +80,8 @@
 
     .color-modes:hover{
         li{
+            margin-bottom: 1rem;
+
             // transform:translateX(0px);
             // margin: 0rem -0.5rem ;
             // visibility:visible;
