--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
         padding: 0.5rem;
         margin: 0.5rem;
         border-radius: 2rem;
+        margin-bottom: 20vh;
 
         a {
             color: #000000;
