--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -25,14 +25,18 @@
             margin: 0.5rem 0rem;
             width: fit-content;
 
-            display: flex;
+            display: flex;        
+            align-items: flex-start;
+            
             // grid-template-columns: repeat(12, 1fr);
             gap: 0.5rem;
-            align-items: baseline;
+            // align-items: baseline;
 
             h1 {
                 grid-column: span 2;
                 font-size: 1.7rem;
+                vertical-align: top;
+
 
             }
 
@@ -41,6 +45,7 @@
                 grid-column: span 1;
                 font-family: Kleukens;
                 font-size: 1.5rem;
+                vertical-align: top;
 
             }
         }
