--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
     width: 100vw;
 
     .project-list {
-        padding: 2rem 0rem;
+        // padding: 2rem 0rem;
         display: grid;
         grid-template-columns: repeat(12, 1fr);
     }
@@ -11,10 +11,11 @@
     .blog-section,
     .space-section {
         width: auto;
-        padding: 0.5rem;
+        padding: 0.5rem 0rem;
         margin: 0.5rem;
         border-radius: 2rem;
-        margin-bottom: 20vh;
+        margin-bottom: 10vh;
+        margin-top: 2rem;
 
         a {
             color: #000000;
