--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -92,7 +92,7 @@ body {
 
 .color-theme {
    background-color: rgba(0,0,0,0);
-   background: linear-gradient(rgb(68, 180, 68), rgb(134, 134, 255), rgb(254, 214, 54));
+   background: linear-gradient(rgb(68, 180, 68), rgb(134, 134, 255), rgb(254, 214, 54), rgb(68, 180, 68), rgb(134, 134, 255), rgb(254, 214, 54));
 
    transition: all 1s ease;
 
@@ -141,7 +141,7 @@ body {
 
    .blog-section{
       .project-preview {
-         padding: 0.5rem;
+         // padding: 0.5rem 0rem;
          // background: rgb(68, 180, 68);
          // background: linear-gradient( rgb(134, 134, 255, 0.3), rgb(68, 180, 68));
          // border-radius: 3rem;
@@ -149,10 +149,10 @@ body {
          .cover-title {
             width:fit-content;
 
-            h1 {
-                font-size: 3rem;
-                line-height: 3rem;
-            }
+            // h1 {
+            //     font-size: 3rem;
+            //     line-height: 3rem;
+            // }
          }
       }
    }
