--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -174,7 +174,7 @@ body {
    .space-section, .space-page{
       .project-preview {
          .cover-title{
-            padding: 0.6rem;
+            // padding: 0.6rem;
             background: rgb(134, 134, 255);
             // background: linear-gradient(rgb(134, 134, 255), rgb(254, 214, 54, 0.6));
             border-radius: 2rem;
