--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -22,31 +22,37 @@
 
         .cover-title {
             z-index: 2;
-            margin: 0.5rem 0rem;
-            width: fit-content;
-
-            display: flex;        
+            // margin: 0.5rem 0rem;
+            width: 100%;
+            // display: grid;        
             align-items: flex-start;
+            justify-content: space-between;
             
-            // grid-template-columns: repeat(12, 1fr);
-            gap: 0.5rem;
+            // grid-template-columns: repeat(2, auto);
+
+            // gap: 0.5rem;
             // align-items: baseline;
 
             h1 {
-                grid-column: span 2;
+                // grid-column: 1/4;
                 font-size: 1.7rem;
                 vertical-align: top;
-
 
             }
 
             h2 {
                 display: inline;
-                grid-column: span 1;
+                // grid-column: span 1;
                 font-family: Kleukens;
                 font-size: 1.5rem;
                 vertical-align: top;
+            }
 
+            .title-img{
+                // grid-column: 1/3;
+                // order: 3;
+                height: 100%;
+                width: 100%;
             }
         }
 
@@ -128,13 +134,22 @@
 
 .space-section {
     .project-preview {
-        display: flex;
-        
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+
         .cover-image {
             height: 60vh;
-            grid-column: 1/13;
+            grid-column: 5/13;
             border-radius: 2rem;
+            order: 2;
+        }
 
+        .cover-title {
+            grid-column: 1/5;
+            order: 1;
+            width: 100%;
+            // width: calc(100% - 2rem);
+            padding: 1rem;
         }
 
     }
@@ -148,9 +163,6 @@
         // mix-blend-mode: difference;
         // background-color: #e8e6e69b;
 
-        .cover-title {
-            // display: none;
-        }
 
         .cover-image {
             // background-color: transparent;
