--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -22,12 +22,12 @@
 
         .cover-title {
             z-index: 2;
-            // margin: 0.5rem 0rem;
             width: 100%;
-            // display: grid;        
+            display: flex;        
             align-items: flex-start;
             justify-content: space-between;
-            
+            border-radius: 2rem 0rem 0rem 2rem;
+
             // grid-template-columns: repeat(2, auto);
             // gap: 0.5rem;
             // align-items: baseline;
@@ -39,19 +39,31 @@
 
             }
 
-            h2 {
+            h2, span {
                 display: inline;
                 // grid-column: span 1;
                 font-family: Kleukens;
-                font-size: 1.5rem;
+                font-size: 1.8rem;
                 vertical-align: top;
             }
 
             .title-img{
+                // position: absolute;
+                transform: scale(1.3);
+                width:100%;
+                // align-self: center;
+                // height:55%;
+                // height: auto;
+                margin-top: 3rem;
+                overflow: visible;
                 // grid-column: 1/3;
                 // order: 3;
-                height: 100%;
-                width: 100%;
+                // height: 100%;
+                // width: 100%;
+
+                img{
+                    object-fit: contain;
+                }
             }
         }
 
@@ -114,7 +126,7 @@
         line-height: 2.5rem;
     }
 
-    h2 {
+    h2, span {
         display: inline;
         // max-width: 8vw;
         // grid-column: span 1;
@@ -137,9 +149,9 @@
         grid-template-columns: repeat(12, 1fr);
 
         .cover-image {
-            height: 60vh;
+            height: 70vh;
             grid-column: 5/13;
-            border-radius: 2rem;
+            border-radius: 0rem 2rem 2rem 0rem;
             order: 2;
         }
 
@@ -167,7 +179,7 @@
             // background-color: transparent;
             // mix-blend-mode: difference;
             // overflow: visible;
-            border-radius: 2rem;
+            // border-radius: 0rem 2rem 2rem 0rem;
             
             .html-content {
                 overflow: visible;
