--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -51,7 +51,7 @@
                 // vertical-align: top;
             }
 
-            .year, .type {
+            .work-year, .type {
                 display: none;
                 // order: 2;
             }
