--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,8 +1,11 @@
 .work-page,
 .work-section {
     overflow: hidden;
+    // width: 100vw;
 
     .project-list {
+        width: 80vw;
+        overflow: hidden;
         padding: 0rem 0.5rem;
         margin-top: 1rem;
 
@@ -14,69 +17,70 @@
         a {
             height: max-content;
         }
+        
+        .project-preview {
+            // width: 30vw;
+            grid-column: span 1;
+            // height: max-content;
+    
+            .cover-image {
+                // width: min-content;
+                transition: all 0.25s ease;
+                margin-bottom: 0.5rem;
+    
+                img, .video-section {
+                    object-fit: contain;
+                }
+
+                video{
+                    width: 100%;
+                }
+            }
+    
+            .cover-title {
+                // position: absolute;
+                z-index: 1;
+    
+                display: flex;
+                // display: grid;
+                // grid-template-columns: repeat(6, 1fr);
+                gap: 0.5rem 1.5rem;
+                // margin: 0.5rem;
+                
+    
+                h1 {
+                    font-size: 4.5rem;
+                    font-weight: 90;
+                    line-height: 4rem;
+                    font-family: "Helvetica";
+                    // display: inline;
+                    vertical-align: top;
+                    // grid-column: span 3;
+                }
+    
+                h2 {
+                    display: inline;
+                    vertical-align: top;
+                    font-size: 1.8rem;
+                    font-family: Kleukens;
+                    // margin: 0rem 0.5rem;
+                    // vertical-align: top;
+                }
+    
+                .collaborators {
+                    // grid-column: span 2;
+                    display: inline;
+                    grid-column: 2/5;
+    
+                }
+            }
+    
+            .year, .blog-type {
+                display: none;
+            }
+        }
     }
 
-    .project-preview {
-        width: 100%;
-        height: max-content;
-
-        .cover-image {
-            width: auto;
-            transition: all 0.25s ease;
-            margin-bottom: 0.5rem;
-
-            div {
-                width: 100%;
-                height: 100%;
-            }
-
-            img {
-                object-fit: contain;
-            }
-        }
-
-        .cover-title {
-            // position: absolute;
-            z-index: 1;
-
-            display: flex;
-            // display: grid;
-            // grid-template-columns: repeat(6, 1fr);
-            gap: 0.5rem 1.5rem;
-            // margin: 0.5rem;
-            
-
-            h1 {
-                font-size: 4.5rem;
-                font-weight: 90;
-                line-height: 4rem;
-                font-family: "Helvetica";
-                // display: inline;
-                vertical-align: top;
-                // grid-column: span 3;
-            }
-
-            h2 {
-                display: inline;
-                vertical-align: top;
-                font-size: 1.8rem;
-                font-family: Kleukens;
-                // margin: 0rem 0.5rem;
-                // vertical-align: top;
-            }
-
-            .collaborators {
-                // grid-column: span 2;
-                display: inline;
-                grid-column: 2/5;
-
-            }
-        }
-
-        .blog-year {
-            display: none;
-        }
-    }
 
 }
 
@@ -172,7 +176,7 @@
             align-items: center;
             overflow: hidden;
 
-            img {
+            img, video {
                 object-fit: contain;
             }
 
