--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -5,7 +5,7 @@
 
     .project-list {
         width: 80vw;
-        overflow: hidden;
+        // overflow: hidden;
         padding: 0rem 0.5rem;
         margin-top: 1rem;
 
@@ -28,11 +28,11 @@
                 transition: all 0.25s ease;
                 margin-bottom: 0.5rem;
     
-                img, .video-section {
+                .image-section, .video-section {
                     object-fit: contain;
                 }
 
-                video{
+                img, video{
                     width: 100%;
                 }
             }
