--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -19,7 +19,7 @@
         }
         
         .project-preview {
-            // width: 30vw;
+            width: 100%;
             grid-column: span 1;
             // height: max-content;
     
