--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -195,7 +195,7 @@
 
 
         .cover-image {
-            // background-color: transparent;
+            background-color: rgba(255,255,255,0.5);
             // mix-blend-mode: difference;
             // overflow: visible;
             // border-radius: 0rem 2rem 2rem 0rem;
