--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,8 +12,8 @@
     .blog-section,
     .space-section {
         width: auto;
-        padding: 0.5rem 0rem;
-        margin: 0.5rem;
+        padding: 0rem 0.5rem;
+        // margin: 0.5rem;
         // border-radius: 2rem;
         margin-bottom: 0vh;
         // margin-top: 2rem;
