--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -6,49 +6,62 @@
         width: 100%;
         overflow: hidden;
         padding: 0rem 0.5rem;
-        margin-top: 1rem;
+        // margin-top: 1rem;
 
         display: grid;
-        // grid-template-columns: 30vw  30vw  30vw;
         grid-template-columns: repeat(3, minmax(0, 1fr));
-        // grid-template-rows: masonry;
         gap: 0.5rem;
 
         a {
             height: max-content;
         }
-        
+
         .project-preview {
             max-width: 100%;
             grid-column: span 1;
             // height: max-content;
-    
+
             .cover-image {
                 // width: min-content;
                 transition: all 0.25s ease;
                 margin-bottom: 0.5rem;
-    
-                .image-section, .video-section {
-                    object-fit: contain;
+                width: 100%;
+
+                .image-section,
+                .video-section,
+                .gatsby-image-wrapper {
+                    object-fit: cover;
+                    object-position: center center;
+
+                    width: 100%;
+                    height: 50vh;
                 }
 
-                img, video{
+                img,
+                video {
                     width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center center;
+
                 }
             }
-    
+
             .cover-title {
                 // position: absolute;
-                z-index: 1;
-    
+                box-sizing: border-box;
+
                 // display: flex;
                 justify-content: space-between;
                 display: grid;
-                grid-template-columns: 1fr 1fr auto auto 1fr 1fr;
-                gap: 0.5rem 1.5rem;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                gap: 0.5rem;
                 // margin: 0.5rem;
-                
-    
+
+                padding: 0.5rem;
+                background: rgb(254, 214, 54, 0);
+                border-radius: 2rem;
+
                 h1 {
                     grid-column: 1/6;
                     font-size: 4.5rem;
@@ -61,7 +74,7 @@
                     // width: 100%;
                     // grid-column: span 3;
                 }
-    
+
                 h2 {
                     grid-column: span 1;
 
@@ -75,22 +88,61 @@
                     // vertical-align: top;
                 }
 
-                .type{
+                .type {
                     grid-column: 6/7;
 
                 }
-    
+
                 .collaborators {
                     // grid-column: span 2;
                     display: inline;
                     grid-column: 2/5;
-    
+
                 }
             }
-    
-            .year, .blog-type {
+
+            .year,
+            .blog-type {
                 display: none;
             }
+        }
+
+        .new-normal {
+            grid-column: span 3;
+
+            display: grid;
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+            gap: 0.5rem;
+
+            .cover-image {
+                grid-column: span 2;
+                order: 2;
+                height: 100%;
+                
+                .image-section,
+                .video-section,
+                .gatsby-image-wrapper {
+                    object-fit: cover;
+                    object-position: center center;
+                    width: 100%;
+                    // max-height: 100%;
+                    height: 70vh;
+
+                }
+                
+                img,
+                video {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            
+            .cover-title {
+                height: 100%;
+                grid-column: span 1;
+                order: 1;
+            }
+
         }
     }
 
@@ -189,7 +241,8 @@
             align-items: center;
             overflow: hidden;
 
-            img, video {
+            img,
+            video {
                 object-fit: contain;
             }
 
