--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -46,6 +46,7 @@
                     height: 100%;
                     object-fit: cover;
                     object-position: center center;
+                    border-radius: 2rem;
 
                 }
             }
