--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -123,8 +123,8 @@
             }
         } 
 
-        .new-normal {
-            grid-column: 2/4;
+        .fill-width {
+            grid-column: span 2;
 
             // display: grid;
             // grid-template-columns: repeat(3, minmax(0, 1fr));
